--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@ li {
 .card {
   background-color: var(--neutral-100);
   border-radius: var(--border-radius);
+  border: 2px solid red;
 }
 
 .title {
@@ -511,7 +512,7 @@ li {
   color: var(--neutral-400);
   font-size: 1.4rem;
   font-weight: 400;
-  border: 1px solid #ccc;
+  border: 1px solid var(--neutral-400);
   border-radius: 2rem;
   padding: 1.3rem;
 }
@@ -845,7 +846,7 @@ input {
     height: fit-content;
     padding: 1rem;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 0.5fr 1.5fr 0.3fr 0.5fr 0.5fr 1fr 0.2fr 0.2fr;
+    grid-template-rows: 0.5fr 1.5fr 0.3fr 0.55fr 0.52fr 1fr 0.2fr 0.2fr;
     grid-template-areas:
       'hello hello'
       'profile profile'
@@ -855,6 +856,10 @@ input {
       'projects projects'
       'select-mode contact'
       'select-mode contact';
+  }
+
+  .card {
+    border: 2px solid green;
   }
 
   .brand,
@@ -889,6 +894,10 @@ input {
 
   .stacks .description p {
     font-size: 1.6rem;
+  }
+
+  .stacks .description {
+    margin-bottom: 1rem;
   }
 
   .slide-container {
@@ -976,14 +985,14 @@ input {
     border-radius: 3rem;
   }
   .contact .button a {
-    width: 12rem;
+    width: 11rem;
     padding: 0.6rem;
-    border-radius: 3rem;
+    border-radius: 1rem;
   }
 }
 
 /* ---------------  TABLETS --------------- */
-@media (min-width: 767px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1023px) {
   .apple-grid {
     margin: 0 auto;
     height: fit-content;
@@ -998,6 +1007,10 @@ input {
       'projects projects'
       'select-mode contact'
       'select-mode contact';
+  }
+
+  .card {
+    border: 2px solid blue;
   }
 
   .profile {
@@ -1041,7 +1054,7 @@ input {
 
   .contact .frame {
     width: 14rem;
-    height: 16.5rem;
+    height: 17rem;
     left: 11rem;
     top: 3.4rem;
   }
@@ -1066,6 +1079,10 @@ input {
   .apple-grid {
     height: 100vh;
     padding-inline: 2rem;
+  }
+
+  .card {
+    border: 2px solid purple;
   }
 
   .profile .profile-name h2 {
@@ -1109,7 +1126,7 @@ input {
     bottom: -3rem;
   }
 }
-
+/* 
 @media (max-width: 1366px) {
   .button-copy {
     bottom: -1.5rem;
@@ -1130,7 +1147,7 @@ input {
   .contact .button a {
     width: 11.5rem;
   }
-}
+} */
 /* ---------------  LARGE DISPLAYS --------------- */
 @media (min-width: 1600px) {
   .apple-grid {
@@ -1139,13 +1156,17 @@ input {
     height: 100vh;
   }
 
+  .card {
+    border: 2px solid pink;
+  }
+
   .mail img {
     width: 100%;
   }
 
   .stacks {
     padding: 3rem 1rem 0 1rem;
-    background-color: purple;
+    /* background-color: purple; */
   }
 
   .button-copy {
